# nobody

./: .gitignore  NOTES.md  README.md  USAGE.md  cyclonedds.xml  dependencies.repos  docker-compose.yml
docker/: Dockerfile  Dockerfile.ptp  Dockerfile.sim  Dockerfile.torch  entrypoint.sh
maps/: STIIMA.data
src/navigation_stack/: CMakeLists.txt  package.xml
src/navigation_stack/launch/: navigation_mapping.launch.py  nobody.launch.py
src/nobody_bringup/: CMakeLists.txt  STIIMA.data  package.xml
src/nobody_bringup/behavior_trees/: follow_classic.xml  follow_server.xml  nav_to_pose_bt.xml  nav_to_pose_bt_default.xml
src/nobody_bringup/config/: hesai_params.yaml  hesai_pointcloud_filter.yaml  mapper_params.yaml  nav2_params.yaml  pointcloud_filter.yaml  rko_lio.yaml  self_filter.yaml
src/nobody_bringup/launch/: go2.launch.py  nav.launch.py  nobody.launch.py  rko_lio.launch.py
src/nobody_bringup/plugins/: toggle_layer.cpp
src/nobody_bringup/scripts/: base_footprint_publisher.py  pointcloud_filter_node.py
src/nobody_bringup/src/: pointcloud_filter_node.cpp
src/nobody_interfaces/: CMakeLists.txt  package.xml
src/nobody_interfaces/srv/: SetTargetClass.srv
src/nobody_nodes/: package.xml  setup.cfg  setup.py
src/nobody_nodes/nobody_nodes/: pointcloud_filter_node_torch.py  target_pos_estimation.py
src/nobody_nodes/nobody_nodes/config/: target_est.yaml
src/nobody_nodes/nobody_nodes/launch/: filters.launch.py  perception.launch.py  vision.launch.py
